almost done design

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,49 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sky"
     tools:context="Activities.ProductDetails">
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="163dp"
-        android:layout_height="24dp"
+        android:layout_width="265dp"
+        android:layout_height="42dp"
         android:layout_marginTop="3dp"
-        android:fontFamily="@font/architects_daughter"
         android:text="time to burrow(in days)"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/punits"
-        app:layout_constraintVertical_bias="0.232" />
+        app:layout_constraintVertical_bias="0.048" />
 
     <TextView
         android:id="@+id/pname"
         android:layout_width="257dp"
         android:layout_height="65dp"
         android:ems="10"
-        android:fontFamily="@font/architects_daughter"
+        android:fontFamily="@font/montez_regular"
         android:inputType="textPersonName"
         android:paddingLeft="80px"
         android:text="Product Name"
-        android:textSize="30sp"
+        android:textSize="45sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pImg"
-        app:layout_constraintVertical_bias="0.069" />
+        app:layout_constraintVertical_bias="0.036" />
 
     <TextView
         android:id="@+id/pdesc"
-        android:layout_width="323dp"
-        android:layout_height="50dp"
+        android:layout_width="265dp"
+        android:layout_height="117dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="260dp"
+        android:background="#FFFFFF"
         android:ems="10"
-        android:fontFamily="@font/architects_daughter"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:singleLine="false"
         android:text="no description"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,59 +57,60 @@
 
     <TextView
         android:id="@+id/punits"
-        android:layout_width="229dp"
-        android:layout_height="42dp"
+        android:layout_width="258dp"
+        android:layout_height="35dp"
         android:layout_marginTop="3dp"
         android:ems="10"
-        android:fontFamily="@font/architects_daughter"
+        android:background="#FFFFFF"
+        android:gravity="left"
         android:inputType="number"
-        android:paddingLeft="50px"
-        android:paddingRight="50px"
         android:text="Units in stock"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="159dp"
-        android:layout_height="17dp"
+        android:layout_width="261dp"
+        android:layout_height="37dp"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/architects_daughter"
         android:text="description:"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pname"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.036" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="102dp"
-        android:layout_height="19dp"
+        android:layout_width="265dp"
+        android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/architects_daughter"
         android:text="units in stock:"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pdesc"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.046" />
 
     <TextView
         android:id="@+id/pburrowTime"
-        android:layout_width="282dp"
-        android:layout_height="39dp"
-        android:fontFamily="@font/architects_daughter"
+        android:layout_width="261dp"
+        android:layout_height="32dp"
+        android:gravity="left"
+        android:background="#FFFFFF"
         android:text="time to burrow(in days)"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         app:layout_constraintVertical_bias="0.0" />
