--- a/app/src/main/res/layout/activity_private_zone.xml
+++ b/app/src/main/res/layout/activity_private_zone.xml
@@ -52,8 +52,8 @@
 
     <Button
         android:id="@+id/MyProductsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="158dp"
+        android:layout_height="49dp"
         android:layout_marginTop="218dp"
         android:text="My protucts"
         android:textColor="@color/cardview_dark_background"
