--- a/app/src/main/res/layout/activity_update_detalis_supplier.xml
+++ b/app/src/main/res/layout/activity_update_detalis_supplier.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="#fcfcfc"
+    android:background="@drawable/sky"
     tools:context="Activities.update_detalis_supplier">
 
     <androidx.cardview.widget.CardView
