--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -145,4 +145,24 @@
             android:id="@+id/action_Second7Fragment_to_First6Fragment"
             app:destination="@id/First6Fragment" />
     </fragment>
+    <fragment
+        android:id="@+id/First7Fragment"
+        android:name="com.example.gmach4u.First7Fragment"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/fragment_first7">
+
+        <action
+            android:id="@+id/action_First7Fragment_to_Second8Fragment"
+            app:destination="@id/Second8Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/Second8Fragment"
+        android:name="com.example.gmach4u.Second8Fragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/fragment_second8">
+
+        <action
+            android:id="@+id/action_Second8Fragment_to_First7Fragment"
+            app:destination="@id/First7Fragment" />
+    </fragment>
 </navigation>
